<resources>
    <string name="app_name" translatable="false">Ignes</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="default_notification_channel_id" translatable="false">blablablaignes</string>

    <!-- Multiple Page Strings -->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="report_alert">Report</string>
    <string name="report_by_an_address_or_in_an_area">Report by an address or in an area?</string>
    <string name="address">Address</string>
    <string name="area">Area</string>
    <string name="quick">Quick</string>
    <string name="simple">Simple</string>
    <string name="detailed">Detailed</string>
    <string name="map">Map</string>
    <string name="neighbour_tips">Neighbour tips</string>
    <string name="contacts">Contacts</string>
    <string name="tasks">Tasks</string>

    <!-- Launch Page Strings -->
    <string name="turning_red_into_green" translatable="false">Turning RED into GREEN</string>
    <string name="touch_anywhere_to_start">Touch anywhere to start</string>
    <string name="created_by">CREATED BY</string>

    <!-- Login Page Strings -->
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_a_new_one">Create a new one</string>
    <string name="enter_without_an_account">Continue without an account</string>
    <string name="forgot_my_password">Forgot my password&lt;u>underline&lt;/u>.</string>
    <string name="recover_password">Recover Password</string>
    <string name="email_was_used_to_create_account">Make sure your email is the one used to create your account.</string>
    <string name="send">Send</string>
    <string name="insert_your_email">Insert your email</string>


    <string name="title_activity_nav_bar" translatable="false">NavBarActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- ProfileActivity String -->
    <string name="points">Points</string>
    <string name="reports">Reports</string>
    <string name="click_to_confirm_account">CLICK HERE TO CONFIRM YOUR ACCOUNT</string>
    <string name="click_to_view_applications">You have new report applications!</string>
    <string name="locality">Locality&#160;</string>
    <string name="more_about">More ABOUT&#160;</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth Date</string>
    <string name="phone_number">Phone Number</string>
    <string name="job">Job</string>
    <string name="skills">Skills</string>
    <string name="edit_your_profile">Edit your Profile</string>
    <string name="tap_to_change_photo">Tap to Change Photo</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="prefer_to_self_describe">Prefer to self describe</string>
    <string name="birthdate_year_hint">yyyy</string>
    <string name="save">Save</string>

    <!-- Register form String -->
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Logout</string>
    <string name="profile_navi">Profile</string>

    <!-- Search Alert String -->
    <string name="search_alert">Search Locality</string>
    <string name="search">Search</string>

    <!-- FeedActivity String -->
    <string name="people_interacted_with_this_report">&#160;people interacted with this report</string>
    <string name="person_interacted_with_report">&#160;person interacted with this report</string>
    <string name="gravity">Gravity:&#160;</string>
    <string name="category">Category:&#160;</string>
    <string name="comments">comments</string>
    <string name="comment">&#160;Comment...</string>
    <string name="post">post</string>
    <string name="zero_tasks_atributted">Zero tasks atributted</string>
    <string name="no_reports_to_list_area">There are no reports to list in this area...</string>
    <string name="description">"Description: "</string>
    <string name="created_on">Created on</string>
    <string name="work_start">Work start</string>
    <string name="get_directions">Get Directions</string>
    <string name="indications">Indications:</string>
    <string name="read_task_notes">Read Task Notes</string>
    <string name="write_your_note_here">Write your note here...</string>
    <string name="note_by">Note by&#160;</string>
    <string name="task_s_notes">Task\'s Notes</string>
    <string name="new_note">New note</string>

    <!-- SettingsActivity String -->
    <string name="change_password">Change password</string>
    <string name="logout_everywhere_logged_in">Logout everywhere logged in</string>
    <string name="change_map_area_radius">Change map area radius</string>
    <string name="add_localities">Add localities</string>
    <string name="current_password">Current Password</string>
    <string name="digit_your_current_password">Insert your current password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="make_sure_your_password_is_the_safest_in_the_world">Make sure your password is as safe as possible.</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>

    <!-- ApplicationActivity String -->
    <string name="candidate_to">Application to&#160;</string>
    <string name="email_application" translatable="false">Email :&#160;</string>
    <string name="information">Information :&#160;</string>
    <string name="budget">Budget :&#160;</string>
    <string name="accept">Accept</string>
    <string name="applications">Applications</string>
    <string name="lista_de_candidaturas_de_organizacoes_hint">List of applications from Organizations to\nresolve your reports.\nRead carefully the received propositions.</string>

    <!-- MapActivity String -->
    <string name="next">Next</string>
    <string name="finish_draw">Finish draw</string>
    <string name="refreshing">Refreshing ...</string>
    <string name="finish_path_view">Finish Path View</string>

    <!-- ReportActivity String -->
    <string name="private_location">Private location</string>
    <string name="title">Title</string>
    <string name="use_my_current_location">Use my current location</string>
    <string name="description_report">Description</string>
    <string name="category_report">Category:</string>
    <string name="image">Image</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="rank_report_gravity">Rank report gravity</string>

    <!-- Add Localities String -->
    <string name="add_addresses_to_keep">Add the addresses that you want to keep close.</string>
    <string name="add_addresses_explanation">By adding a new address, you can check the reports around it in the Feed.</string>
    <string name="example_add_address">For example, you can see the reports around your holiday home.</string>
    <string name="can_use_locality_instead">If you do not want to share your address you can use just the locality (less precision).</string>
    <string name="insert_the_address">Insert the address</string>

    <!-- Change Radius String -->
    <string name="select_the_map_radius_here">Select the map radius here:</string>
    <string name="kilometers">Kilometers</string>
    <string name="meters">Meters</string>
    <string name="our_default_value_for_the_radius_to_show_reports_is_5_km_from_your_current_location">Our default value for the radius to show reports is 5 km from your current location.</string>

    <!-- Confirm Account String -->
    <string name="insert_code_sent_to_email_to_validate">Please insert the code sent to your email and press confirm to validate your account.</string>
    <string name="confirm">Confirm</string>

    <!-- Random String -->
    <string name="report">REPORT :</string>
    <string name="refuse">Refuse</string>

    <!-- ContactsActivity String -->
    <string name="national_emergency_number">National Emergency Number</string>
    <string name="emergency">Emergency</string>
    <string name="others">Others</string>
    <string name="civil_protection_prociv_pt">Civil Protection - prociv.pt</string>
    <string name="safe_village_aldeiasegura_pt">Safe Village - aldeiasegura.pt</string>
    <string name="wokesolutions_wokesolutions_gmail_com" translatable="false">WokeSolutions - wokesolutions@gmail.com</string>
    <string name="report_conclusion_email_notification">Email notifications</string>


    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>


    <string-array name="report_category">
        <item>Limpeza de lixo geral</item>
        <item>Transportes pesados</item>
        <item>Transportes perigosos</item>
        <item>Transporte de pessoas</item>
        <item>Transportes gerais</item>
        <item>Carcaças</item>
        <item>Outros resíduos biológicos</item>
        <item>Jardinagem</item>
        <item>Limpeza de matas/florestas</item>
    </string-array>


</resources>

