<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/add_addresses_to_keep"
        android:textColor="#000000"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/add_addresses_explanation"
        android:textColor="#000000"
        android:textSize="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/example_add_address"
        android:textColor="#000000"
        android:textSize="10dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/address"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/new_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/quicksand_light"
        android:hint="@string/insert_the_address"
        android:textColor="#000000"
        android:textColorHint="#20000000"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_horizontal_margin"

        android:fontFamily="@font/quicksand_light"
        android:inputType="textMultiLine"
        android:text="@string/can_use_locality_instead"
        android:textColor="@color/colorIgnesPrimary"
        android:textSize="10dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        android:background="@color/backgroundColor" />

    <Button
        android:id="@+id/submit_new_address"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:fontFamily="@font/quicksand_bold"
        android:inputType="textCapCharacters"
        android:text="@string/submit"
        android:textColor="@color/backgroundColor"
        android:textSize="12dp"
        android:textStyle="bold" />


</LinearLayout>