<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">


    <EditText
        android:id="@+id/email_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/quicksand_light"
        android:hint="@string/insert_your_email"
        android:inputType="textPassword"
        android:textColorHint="#20000000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="5dp"
        android:background="@color/backgroundColor" />

    <TextView
        android:id="@+id/recoverpassword_advice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/email_was_used_to_create_account"
        android:textColor="@color/colorIgnesPrimary"
        android:textSize="10dp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/send_forgot_pass"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/send"
        android:textColor="@color/backgroundColor"
        android:textStyle="bold" />


</LinearLayout>