<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/quicksand_light"
        android:inputType="textAutoCorrect"
        android:text="NIF : "
        android:textColor="@color/colorIgnesPrimary"
        android:textSize="17dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nif_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/quicksand_light"
        android:inputType="textAutoCorrect"
        android:textColor="#000000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="5dp"
        android:background="@color/backgroundColor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/quicksand_light"
        android:inputType="textAutoCorrect"
        android:text="@string/report"
        android:textColor="@color/colorIgnesPrimary"
        android:textSize="17dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/report_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/quicksand_light"
        android:inputType="textAutoCorrect"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/aceitar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refuse" />
    </LinearLayout>
</LinearLayout>