<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sidebar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:layout_marginEnd="-65dp"
    android:layout_marginRight="-65dp"
    android:paddingHorizontal="50dp"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/botao_profile"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/profile_navi"
        android:textColor="#000000"/>
<View
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:background="@color/colorIgnesPrimary"/>


    <Button
        android:id="@+id/botao2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Feed"
        android:textColor="#000000"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorIgnesPrimary"/>

    <Button
        android:id="@+id/botao3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="About"
        android:textColor="#000000"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorIgnesPrimary"/>

    <Button
        android:id="@+id/botao1"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/action_settings"
        android:textColor="#000000"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorIgnesPrimary"/>

    <Button
        android:id="@+id/botao_logout"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/log_out"
        android:textColor="#000000"/>
</LinearLayout>
